PIRATE-4462, fix overlap seen in product/tag search on "chocolate" template.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1283,11 +1283,29 @@ select::-ms-expand {
     height: 42px;
   }
   .productlist-search {
-    position: absolute;
     bottom: 0;
+    input {
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      @media @tablet {
+        width: 100%;
+        margin-bottom: 20px;
+      }
+    }
     input, button {
       height: 42px;
     }
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .productlist-display-form .form-group {
+      position: relative;
+      vertical-align: top;
+  }
+  .productlist-display-form button {
+    height: 39px;
   }
 }
 
